# rhino-mcp

./: .gitignore  GHCodeMCP_new_simpl.py  LICENSE  README.md  main.py  pyproject.toml
docs/: FEATURES.md  FEATURES_JP.md  MCP_GUIDE.md  README.md  README_JP.md  TEST_SCENARIOS.md
rhino_mcp/: grasshopper_mcp_bridge.py  grasshopper_mcp_client.gh  grasshopper_mcp_client.py  pyproject.toml  rhino_mcp_bridge.py
rhino_mcp/docs/: MCP_GUIDE.md
rhino_mcp/rhino_mcp/: grasshopper_tools.py  server.py
rhino_scripts/: grasshopper_mcp_bridge.py  rhino_mcp_bridge.py
src/rhino_mcp/: grasshopper_tools.py  rhino_tools.py
