[project]
name = "rhino-mcp"
version = "0.1.0"
description = "Rhino integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rhino MCP Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "mcp-python>=0.1.0",
    "fastmcp>=0.1.0",
    "uvicorn>=0.15.0",
    "fastapi>=0.68.0",
    "python-json-logger>=2.0.0",
    "pydantic>=1.8.0",
    "typing-extensions>=4.0.0",
    "requests",
    "pillow",
]

[project.scripts]
rhino-mcp = "rhino_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."} 